--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
 
 <fieldset>
-    <legend>OpenVINO YoloV3 Darknet Object Detection</legend>
+	<legend>OpenVINO YoloV3 Darknet Object Detection. Documentation: <a href="https://github.com/philipsoeberg/yolo-v3-ncs2-docker" target="_blank">https://github.com/philipsoeberg/yolo-v3-ncs2-docker</a></legend>
 
     <div>
         <label for="pic">Picture:</label>
